# rust-otel-poc

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  changes.patch  docker-compose.yml  requirements.md
src/: handlers.rs  handlers_test.rs  main.rs  models.rs  open_telemetry.rs  telemetry.rs
