[package]
name = "rust-otel"
version = "0.1.0"
edition = "2021"

[dependencies]
# OpenTelemetry dependencies
opentelemetry = { version = "0.19", features = ["rt-tokio"] }
opentelemetry-jaeger = { version = "0.18", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.12", features = ["http-proto", "reqwest-client"] }
tracing = "0.1"
tracing-opentelemetry = "0.19"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Web framework
actix-web = "4.3"

# Async runtime
tokio = { version = "1.28", features = ["full"] }

# Serialization/Deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
log = "0.4"
env_logger = "0.10"
opentelemetry-semantic-conventions = "0.29.0"
